@@ -53,6 +53,7 @@ Bug fixes
  * Fixed toggle behaviour of userbar on mobile (Robert Rollins)
  * Image rendition / document file deletion now happens on a post_delete signal, so that files are not lost if the deletion does not proceed (Janneke Janssen)
  * "Your recent edits" list on dashboard no longer leaves out pages that another user has subsequently edited (Michael Cordover, Kees Hink, João Luiz Lorencetti)
+ * ``InlinePanel`` now accepts a ``classname`` parameter as per the documentation (emg36, Matt Westcott)
 
 
 Upgrade considerations
