@@ -666,13 +666,14 @@ class BaseInlinePanel(EditHandler):
 
 
 class InlinePanel(object):
-    def __init__(self, relation_name, panels=None, label='', help_text='', min_num=None, max_num=None):
+    def __init__(self, relation_name, panels=None, classname='', label='', help_text='', min_num=None, max_num=None):
         self.relation_name = relation_name
         self.panels = panels
         self.label = label
         self.help_text = help_text
         self.min_num = min_num
         self.max_num = max_num
+        self.classname = classname
 
     def bind_to_model(self, model):
         if django.VERSION >= (1, 9):
@@ -690,7 +691,8 @@ class InlinePanel(object):
             # TODO: can we pick this out of the foreign key definition as an alternative?
             # (with a bit of help from the inlineformset object, as we do for label/heading)
             'min_num': self.min_num,
-            'max_num': self.max_num
+            'max_num': self.max_num,
+            'classname': self.classname,
         })
 
 
